[gd_scene load_steps=6 format=3 uid="uid://8bxi6os700kl"]

[ext_resource type="Script" uid="uid://bpim71cucpw52" path="res://components/map looper/rooms/rooms.gd" id="1_rt8o8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rt8o8"]
albedo_color = Color(0.18359044, 0.18359044, 0.18359044, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_rt8o8"]
size = Vector3(2.9780273, 2.0721436, 2.4248047)

[sub_resource type="BoxShape3D" id="BoxShape3D_ykdk0"]
size = Vector3(2.9780273, 2.0721436, 2.4248047)

[sub_resource type="BoxShape3D" id="BoxShape3D_wmfdp"]
size = Vector3(2.9780273, 2.0721436, 2.4248047)

[node name="RoomB" type="Node3D" node_paths=PackedStringArray("center_pivot", "left_pivot", "right_pivot")]
script = ExtResource("1_rt8o8")
center_pivot = NodePath("Misc/Pivots/CenterPivot")
left_pivot = NodePath("Misc/Pivots/LeftPivot")
right_pivot = NodePath("Misc/Pivots/RightPivot")

[node name="Mesh" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.49949998, -1.5)
use_collision = true
size = Vector3(3, 1, 3)
material = SubResource("StandardMaterial3D_rt8o8")

[node name="Misc" type="Node3D" parent="."]

[node name="CenterZone" type="Area3D" parent="Misc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.1429663, -97.16745)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Misc/CenterZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44921875, 0.30963135)
shape = SubResource("BoxShape3D_rt8o8")
debug_color = Color(0.9291779, 0, 0.26998833, 0.8235294)

[node name="LeftZone" type="Area3D" parent="Misc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.8087244, -5.1429663, -97.16745)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Misc/LeftZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55419254, 0.37075806)
shape = SubResource("BoxShape3D_ykdk0")
debug_color = Color(0.9291779, 0, 0.26998833, 0.8235294)

[node name="RightZone" type="Area3D" parent="Misc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.482877, -5.1429663, -97.16745)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Misc/RightZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.51538086, 0.5360718, 0.29541016)
shape = SubResource("BoxShape3D_wmfdp")
debug_color = Color(0.9291779, 0, 0.26998833, 0.8235294)

[node name="Pivots" type="Node3D" parent="Misc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -75)

[node name="CenterPivot" type="Marker3D" parent="Misc/Pivots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -11.276279, -30.182455)

[node name="LeftPivot" type="Marker3D" parent="Misc/Pivots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.568573, -11.276279, -21.677685)

[node name="RightPivot" type="Marker3D" parent="Misc/Pivots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.591972, -11.276279, -21.677685)

[connection signal="body_entered" from="Misc/CenterZone" to="." method="center_touched"]
[connection signal="body_entered" from="Misc/LeftZone" to="." method="left_touched"]
[connection signal="body_entered" from="Misc/RightZone" to="." method="right_touched"]
